// Vitest Snapshot v1

exports[`author rpc > works 1`] = `
[
  [
    SubmittableResult {
      "dispatchError": undefined,
      "dispatchInfo": undefined,
      "events": [],
      "internalError": undefined,
      "status": {
        "ready": null,
      },
      "txHash": "0xc2a84f9b56b87015a0a325792bdb9ac4c14439fd75a133cde9c7b06c5e56c850",
      "txIndex": undefined,
    },
  ],
  [
    SubmittableResult {
      "dispatchError": undefined,
      "dispatchInfo": undefined,
      "events": [],
      "internalError": undefined,
      "status": {
        "finalized": "0x9b286c39f3b65628bc3c8025dffa8e22e34a30f0736648aa63b12e7f9e9a7034",
      },
      "txHash": "0xc2a84f9b56b87015a0a325792bdb9ac4c14439fd75a133cde9c7b06c5e56c850",
      "txIndex": 1,
    },
  ],
]
`;

exports[`author rpc > works 2`] = `
{
  "block": {
    "extrinsics": [
      "0x280401000b207230268401",
      "0x35028400d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d011838a3d73f9924a9393f65f695bac423699fc5be014d6e24ed673a1e01bb0455ee4eebde26b23a48828fd3c66d23bd7530ee86d84ca3552fc6305aa26089ae818401a101000a00008eaf04151687736326c9fea17e25fc5287613693c912909cb226aa4794f26a489101",
    ],
    "header": {
      "digest": {
        "logs": [
          {
            "preRuntime": [
              "0x61757261",
              "0x",
            ],
          },
          {
            "seal": [
              "0x61757261",
              "0xf6ad306013246ecd4cebb56f4622b63a4c38a68ed72bba8b43d6af3aa20b5c746d5a1fb7f44c12d1b689492e16485e0693f2ac97e9d8d495f9335b36c24b388b",
            ],
          },
        ],
      },
      "extrinsicsRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "number": 188601,
      "parentHash": "0x35df24f3f2f87bf26768ea753c5dfe8898c194d73127bade0e1b33cf85170105",
      "stateRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
    },
  },
  "justifications": null,
}
`;

exports[`author rpc > works 3`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 5096846750896,
    "miscFrozen": 0,
    "reserved": 7000000000,
  },
  "nonce": 105,
  "providers": 2,
  "sufficients": 0,
}
`;

exports[`author rpc > works 4`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 109499252881,
    "miscFrozen": 0,
    "reserved": 7000000000,
  },
  "nonce": 23,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`author rpc > works 5`] = `
[
  [
    SubmittableResult {
      "dispatchError": undefined,
      "dispatchInfo": undefined,
      "events": [],
      "internalError": undefined,
      "status": {
        "ready": null,
      },
      "txHash": "0x199309ba8b7552d9087cd2405afb3a8279126d7dff57cd6f927e2dea996ac472",
      "txIndex": undefined,
    },
  ],
  [
    SubmittableResult {
      "dispatchError": undefined,
      "dispatchInfo": undefined,
      "events": [],
      "internalError": undefined,
      "status": {
        "finalized": "0x33237682c4552a2309ca8834b6d2253f1596394a66fdf99a3de171a15871327a",
      },
      "txHash": "0x199309ba8b7552d9087cd2405afb3a8279126d7dff57cd6f927e2dea996ac472",
      "txIndex": 1,
    },
  ],
]
`;

exports[`author rpc > works 6`] = `
{
  "block": {
    "extrinsics": [
      "0x280401000b40c030268401",
      "0x35028400d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d0124fb3f6027ef76d82556d7bf969996ecbd9153a39c5e39ad8f74b045c464f67542d676fd115008e4bc8075aca3a46ef82906601866dbbdd35ad544c2952d13859401a501000a00008eaf04151687736326c9fea17e25fc5287613693c912909cb226aa4794f26a482103",
    ],
    "header": {
      "digest": {
        "logs": [
          {
            "preRuntime": [
              "0x61757261",
              "0x",
            ],
          },
          {
            "seal": [
              "0x61757261",
              "0xf6ad306013246ecd4cebb56f4622b63a4c38a68ed72bba8b43d6af3aa20b5c746d5a1fb7f44c12d1b689492e16485e0693f2ac97e9d8d495f9335b36c24b388b",
            ],
          },
        ],
      },
      "extrinsicsRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "number": 188602,
      "parentHash": "0x9b286c39f3b65628bc3c8025dffa8e22e34a30f0736648aa63b12e7f9e9a7034",
      "stateRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
    },
  },
  "justifications": null,
}
`;

exports[`author rpc > works 7`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 5096846750896,
    "miscFrozen": 0,
    "reserved": 7000000000,
  },
  "nonce": 105,
  "providers": 2,
  "sufficients": 0,
}
`;

exports[`author rpc > works 8`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 109499252881,
    "miscFrozen": 0,
    "reserved": 7000000000,
  },
  "nonce": 23,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`author rpc > works 9`] = `
[
  [
    SubmittableResult {
      "dispatchError": undefined,
      "dispatchInfo": undefined,
      "events": [],
      "internalError": undefined,
      "status": {
        "ready": null,
      },
      "txHash": "0x8fb1f2c2fe71e0ba652b877118eb3aff160acf36029bf6d94b42240700be710f",
      "txIndex": undefined,
    },
  ],
  [
    SubmittableResult {
      "dispatchError": undefined,
      "dispatchInfo": undefined,
      "events": [],
      "internalError": undefined,
      "status": {
        "finalized": "0xe559d1ffaf65b1e0c0dba30711cbe066223101004a2fccd065ff34b0dc4d6f97",
      },
      "txHash": "0x8fb1f2c2fe71e0ba652b877118eb3aff160acf36029bf6d94b42240700be710f",
      "txIndex": 1,
    },
  ],
]
`;

exports[`author rpc > works 10`] = `
{
  "block": {
    "extrinsics": [
      "0x280401000b600e31268401",
      "0x35028400d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d017a4f9ade87a006b203f537572a92aae211662770b2cdafc03ee11c9d7fe1326f37e19ecccba3a1d98cc6291565a5d66d63576e34bf593dfeed8e991d66a1b98ea401a501000a00008eaf04151687736326c9fea17e25fc5287613693c912909cb226aa4794f26a48b104",
    ],
    "header": {
      "digest": {
        "logs": [
          {
            "preRuntime": [
              "0x61757261",
              "0x",
            ],
          },
          {
            "seal": [
              "0x61757261",
              "0xf6ad306013246ecd4cebb56f4622b63a4c38a68ed72bba8b43d6af3aa20b5c746d5a1fb7f44c12d1b689492e16485e0693f2ac97e9d8d495f9335b36c24b388b",
            ],
          },
        ],
      },
      "extrinsicsRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "number": 188603,
      "parentHash": "0x33237682c4552a2309ca8834b6d2253f1596394a66fdf99a3de171a15871327a",
      "stateRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
    },
  },
  "justifications": null,
}
`;

exports[`author rpc > works 11`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 5096846750896,
    "miscFrozen": 0,
    "reserved": 7000000000,
  },
  "nonce": 105,
  "providers": 2,
  "sufficients": 0,
}
`;

exports[`author rpc > works 12`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 109499252881,
    "miscFrozen": 0,
    "reserved": 7000000000,
  },
  "nonce": 23,
  "providers": 1,
  "sufficients": 0,
}
`;
